--- a/BobinaGirante_Digital.ui
+++ b/BobinaGirante_Digital.ui
@@ -480,6 +480,9 @@
          <pointsize>10</pointsize>
         </font>
        </property>
+       <property name="currentIndex">
+        <number>1</number>
+       </property>
        <item>
         <property name="text">
          <string>PUC</string>
@@ -4993,6 +4996,9 @@ Frequência</string>
          <height>17</height>
         </rect>
        </property>
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Essa opção permite a leitura da corrente diretamente do multímetro através da saída do DCCT.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
        <property name="text">
         <string>DCCT</string>
        </property>
@@ -5180,9 +5186,9 @@ Frequência</string>
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>210</y>
+        <y>240</y>
         <width>101</width>
-        <height>421</height>
+        <height>391</height>
        </rect>
       </property>
       <property name="font">
@@ -5203,7 +5209,7 @@ Frequência</string>
         </rect>
        </property>
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;Marcando esta caixa, o programa registrará a corrente nas bobinas Trim (Auxiliares) do ímã. &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Marcando esta caixa, o programa registrará a corrente nas bobinas Trim (Auxiliares) do ímã. &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="text">
         <string> Bobina
@@ -5294,6 +5300,30 @@ Frequência</string>
         <string>QS Coil</string>
        </property>
       </widget>
+     </widget>
+     <widget class="QCheckBox" name="check_tensao">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>200</y>
+        <width>81</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="toolTip">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Marcando essa opção o programa coletará a tensão no ímã. Certifique-se de que o Data Acquisition 34970A esteja conectado e com o canal apropriado configurado.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="text">
+       <string>Ler tensão</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_12">
@@ -5422,7 +5452,7 @@ Frequência</string>
         <number>40</number>
        </property>
        <property name="value">
-        <number>0</number>
+        <number>8</number>
        </property>
       </widget>
       <widget class="QLabel" name="label_56">
@@ -5518,7 +5548,7 @@ Frequência</string>
         <number>40</number>
        </property>
        <property name="value">
-        <number>9</number>
+        <number>6</number>
        </property>
       </widget>
       <widget class="QLabel" name="label_multicanal">
@@ -6612,7 +6642,7 @@ Frequência</string>
         <rect>
          <x>410</x>
          <y>80</y>
-         <width>291</width>
+         <width>301</width>
          <height>201</height>
         </rect>
        </property>
@@ -6730,9 +6760,9 @@ Frequência</string>
       <widget class="QGroupBox" name="groupBox_13">
        <property name="geometry">
         <rect>
-         <x>30</x>
+         <x>20</x>
          <y>80</y>
-         <width>281</width>
+         <width>291</width>
          <height>201</height>
         </rect>
        </property>
@@ -6850,7 +6880,7 @@ Frequência</string>
       <widget class="QPushButton" name="BobinaS">
        <property name="geometry">
         <rect>
-         <x>540</x>
+         <x>550</x>
          <y>460</y>
          <width>131</width>
          <height>41</height>
@@ -6867,7 +6897,7 @@ Frequência</string>
       <widget class="QPushButton" name="BobinaL">
        <property name="geometry">
         <rect>
-         <x>360</x>
+         <x>370</x>
          <y>460</y>
          <width>151</width>
          <height>41</height>
@@ -6886,7 +6916,7 @@ Frequência</string>
         <rect>
          <x>180</x>
          <y>30</y>
-         <width>521</width>
+         <width>531</width>
          <height>31</height>
         </rect>
        </property>
@@ -6910,7 +6940,7 @@ Frequência</string>
       <widget class="QLabel" name="label_34">
        <property name="geometry">
         <rect>
-         <x>310</x>
+         <x>270</x>
          <y>280</y>
          <width>81</width>
          <height>41</height>
@@ -6932,9 +6962,9 @@ Frequência</string>
       <widget class="QComboBox" name="sentido_2">
        <property name="geometry">
         <rect>
-         <x>400</x>
+         <x>360</x>
          <y>290</y>
-         <width>91</width>
+         <width>161</width>
          <height>31</height>
         </rect>
        </property>
@@ -6948,11 +6978,16 @@ Frequência</string>
          <string>Anti-horário</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Horário e Anti-horário</string>
+        </property>
+       </item>
       </widget>
       <widget class="QComboBox" name="tipo_bobina">
        <property name="geometry">
         <rect>
-         <x>610</x>
+         <x>620</x>
          <y>290</y>
          <width>91</width>
          <height>31</height>
@@ -6972,7 +7007,7 @@ Frequência</string>
       <widget class="QLabel" name="label_53">
        <property name="geometry">
         <rect>
-         <x>500</x>
+         <x>520</x>
          <y>290</y>
          <width>101</width>
          <height>31</height>
@@ -6988,9 +7023,9 @@ Frequência</string>
       <widget class="QGroupBox" name="groupBox_29">
        <property name="geometry">
         <rect>
-         <x>30</x>
+         <x>20</x>
          <y>330</y>
-         <width>671</width>
+         <width>691</width>
          <height>121</height>
         </rect>
        </property>
@@ -7002,7 +7037,7 @@ Frequência</string>
          <rect>
           <x>10</x>
           <y>30</y>
-          <width>651</width>
+          <width>661</width>
           <height>81</height>
          </rect>
         </property>
@@ -7037,7 +7072,7 @@ Frequência</string>
       <widget class="QLabel" name="label_175">
        <property name="geometry">
         <rect>
-         <x>30</x>
+         <x>20</x>
          <y>290</y>
          <width>121</width>
          <height>31</height>
@@ -7050,9 +7085,9 @@ Frequência</string>
       <widget class="QComboBox" name="ima_bobina">
        <property name="geometry">
         <rect>
-         <x>160</x>
+         <x>150</x>
          <y>290</y>
-         <width>141</width>
+         <width>121</width>
          <height>31</height>
         </rect>
        </property>
@@ -7709,11 +7744,6 @@ Configurações</string>
          <string>Sextupolo</string>
         </property>
        </item>
-       <item>
-        <property name="text">
-         <string>Quad. Skew</string>
-        </property>
-       </item>
       </widget>
       <widget class="QLabel" name="label_49">
        <property name="geometry">
@@ -7810,6 +7840,22 @@ Configurações</string>
        </property>
        <property name="text">
         <string>Zerar Offset</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="ch_Skew">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>380</x>
+         <y>296</y>
+         <width>111</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Skew</string>
        </property>
       </widget>
      </widget>
